--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
-        android:name=".MyApp"
+        android:name="com.pokemon.hikari.mebius.log.MyApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.Mebiuslog"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="com.pokemon.hikari.mebius.log.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Mebiuslog">
             <intent-filter>
