--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Oct 21 22:12:57 CST 2023
-sdk.dir=/Users/xwang/Library/Android/sdk
+#Wed Nov 01 13:20:09 CST 2023
+sdk.dir=C\:\\Users\\XWANG\\AppData\\Local\\Android\\Sdk
